fix(src/components/Contact.pcss): fix style for momentary vertical scrollbar

--- a/src/components/Contact.pcss
+++ b/src/components/Contact.pcss
@@ -3,6 +3,7 @@
 
 .contact {
   margin-top: 8vh;
+  overflow: hidden; /* fix for animate.css momentary scrollbar */
 
   .icons {
     max-width: 11em;
